--- a/src/app/actividades/actividades.component.html
+++ b/src/app/actividades/actividades.component.html
@@ -46,7 +46,7 @@
         </tr>
   </tbody>
 </table>
-
+<!-- 
 <section>
    <div class="example-button-row">
     <button mat-button (click)="annadir()" >Añadir</button>
@@ -55,3 +55,41 @@
     <button mat-button (click)="cancelar()" color="primary">Cancelar</button>
    </div>
 </section>
+-->
+
+<div class="btn-izquierda">
+  <span class="container" style="color:black ;background-color: darkgrey;">Borrador</span>
+  &nbsp;
+  <span class="container" style="color:black ;background-color: lightslategrey;">Enviado</span>
+  &nbsp;
+  <span class="container" style="color:black ;background-color: rgba(0, 255, 0, 0.575);">Visado</span>
+  &nbsp;
+  <span class="container" style="color:black ;background-color: rgb(218, 68, 68);">Rechazado</span>
+</div>
+<div class="btn-derecha">
+  <button mat-stroked-button color="primary" (click)="annadir()">
+    <mat-icon>edit</mat-icon>Añadir			
+  </button>
+  &nbsp;
+  &nbsp;
+  <button mat-stroked-button color="primary">
+    <mat-icon>save</mat-icon>Guardar
+  </button>
+  &nbsp;
+  &nbsp;
+  <button mat-stroked-button color="primary">
+    <mat-icon>send</mat-icon>Enviar			
+  </button>
+  &nbsp;
+  &nbsp;
+  <button mat-stroked-button color="primary">
+    <mat-icon>cancel</mat-icon>Cancelar
+  </button>
+  &nbsp;
+  &nbsp;
+  <button mat-stroked-button color="primary">
+    <mat-icon>print</mat-icon>Imprimir
+  </button>	
+</div>
+
+<br/><br/><br/>
