--- a/src/app/gastos/gastos.component.html
+++ b/src/app/gastos/gastos.component.html
@@ -1,1 +1,120 @@
-<p>gastos works!</p>
+
+<br>
+
+<div class="container">
+	<h3>AQUÍ IRÁ EL COMPONENTE DE NOMBRE Y APELLIDOS Y SELECCIÓN DEL MES</h3>
+</div>
+
+
+<br>
+<br>
+<div class="contenedorTabla">
+	<table class="table table-striped">
+	    <thead >	
+			<tr>
+				<th scope="col">Proyecto</th><th scope="col">Desde - Hasta</th><th scope="col">Tipo</th>
+		 		<th scope="col">Unidades</th><th scope="col">Importe</th><th scope="col">Total</th><th scope="col">Descripción</th>
+				<th scope="col">Estado</th>
+		 	</tr>
+		</thead>
+	  	<tbody>
+			<tr *ngFor="let gasto of listaGastos()">
+				<td>
+					<div>
+						<select class="custom-select" [(ngModel)]="gasto.dsProyecto">
+							<option value="">Lista de Proyectos - Obtener del backend</option>
+							<!-- Aquí irá un *ngFor con la lista de Proyectos -->
+							<option value="CMMA">CMMA</option>
+							<option selected value="Proyecto 1">Proyecto 1</option>
+							<option value="Proyecto 2">Proyecto 2</option>
+							<option value="Interproyecto">Interproyecto</option>
+						</select>
+					</div>
+				</td>
+				<td>
+				<app-calgastos-ngx></app-calgastos-ngx>
+				</td>
+				<td>			
+					<div>
+						<select class="custom-select" [(ngModel)]="gasto.dsTipoGasto">
+							<option value="Lista">Lista de Tipos - Obtener del backend</option>
+							<!-- Aquí irá un *ngFor con la lista de Tipos -->
+							<option value="Transporte">Transporte</option>
+							<option value="Comida">Comida</option>
+							<option value="Alojamiento">Alojamiento</option>
+							<option value="Taxi">Taxi</option>
+							<option value="Desayuno">Desayuno</option>
+						</select>
+					</div>
+				</td>
+				<td>
+					<input type="number" class="form-control campoNum" value= "{{gasto.nmUnidades}}"/>
+				</td>
+				<td>
+					<input type="number" class="form-control campoNum" value= "{{gasto.nmImporte}}"/>
+				</td>
+				<td>
+					<input type="number" class="form-control campoNum" value= "{{gasto.nmTotal}}"/>
+				</td>
+				<td>
+					<input type="text" class="form-control campoNum" value= "{{gasto.dsDescripcion}}"/>
+				</td>
+				<td>
+					<label type="text">{{estado}}</label>
+				</td>
+				<td>
+					<div>
+					<button mat-mini-fab color="warn">
+					<mat-icon>delete</mat-icon>
+					</button>
+					<!--
+						<button type="button" class="btn btn-outline-dark">Borrar</button>
+					-->
+					</div>				
+				</td>
+			</tr>	
+		</tbody>
+	</table>
+
+</div>
+
+<div class="btn-izquierda">
+	<span class="container" style="color:black ;background-color: darkgrey;">Borrador</span>
+	&nbsp;
+	<span class="container" style="color:black ;background-color: lightslategrey;">Enviado</span>
+	&nbsp;
+	<span class="container" style="color:black ;background-color: rgba(0, 255, 0, 0.575);">Visado</span>
+	&nbsp;
+	<span class="container" style="color:black ;background-color: rgb(218, 68, 68);">Rechazado</span>
+	&nbsp;
+	&nbsp;
+</div>
+<div class="btn-derecha">
+	<button mat-stroked-button color="primary">
+		<mat-icon>edit</mat-icon>Añadir			
+	</button>
+	&nbsp;
+	&nbsp;
+	<button mat-stroked-button color="primary">
+		<mat-icon>save</mat-icon>Guardar
+	</button>
+	&nbsp;
+	&nbsp;
+	<button mat-stroked-button color="primary">
+		<mat-icon>send</mat-icon>Enviar			
+	</button>
+	&nbsp;
+	&nbsp;
+	<button mat-stroked-button color="primary">
+		<mat-icon>cancel</mat-icon>Cancelar
+	</button>
+	&nbsp;
+	&nbsp;
+	<button mat-stroked-button color="primary">
+		<mat-icon>print</mat-icon>Imprimir
+	</button>	
+</div>
+
+<br/><br/><br/>
+
+
