--- a/src/app/gastos/gastos.component.html
+++ b/src/app/gastos/gastos.component.html
@@ -1,13 +1,5 @@
+<app-selec-mes></app-selec-mes>
 
-<br>
-
-<div class="container">
-	<h3>AQUÍ IRÁ EL COMPONENTE DE NOMBRE Y APELLIDOS Y SELECCIÓN DEL MES</h3>
-</div>
-
-
-<br>
-<br>
 <div class="contenedorTabla">
 	<table class="table table-striped">
 	    <thead >	
