--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,11 @@
         </li>
         <li class="nav-item" *ngIf="router.url == '/empleados'">
           <a class="nav-link " routerLink="empleados/solicitudVacaciones" >Solicitud de vacaciones</a>
-        </li>     </ul>
+        </li>     
+        <li class="nav-item" *ngIf="loginService.isAuth()">
+          <a class="nav-link "  (click)="logout()" >Desconectar</a>
+        </li>     
+      </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
