--- a/src/app/gastos/gastos.component.html
+++ b/src/app/gastos/gastos.component.html
@@ -1,4 +1,4 @@
-<app-selec-mes></app-selec-mes>
+<app-selec-mes [titulo]="'Parte de Gastos Mensual'" [empleado]="nombre" [periodo]="periodo"></app-selec-mes>
 
 <div class="contenedorTabla">
 	<table class="table table-striped">
