--- a/src/app/selec-mes/selec-mes.component.html
+++ b/src/app/selec-mes/selec-mes.component.html
@@ -1,7 +1,7 @@
 <mat-card class="example-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>Parte de Actividades Mensual</mat-card-title>
+      <mat-card-title>{{ titulo }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
         <p>
@@ -12,7 +12,7 @@
         </mat-form-field>
         <br/>
         <mat-form-field class="seccionSelect">
-        <mat-select placeholder="Mes/Año:" [(ngModel)]="seleccionada" name="mes" (selectionChange)="optSeleccion()">
+        <mat-select placeholder="Mes/Año:" [(ngModel)]="periodoSel" name="mes" (selectionChange)="seleccionPeriodo()">
             <mat-option *ngFor="let pe of periodos" [value]="pe.valor">
             {{pe.muestraValor}}
             </mat-option>
