--- a/src/app/vacaciones/vacaciones.component.html
+++ b/src/app/vacaciones/vacaciones.component.html
@@ -1,4 +1,4 @@
-<app-selec-mes></app-selec-mes>
+<app-selec-mes  [titulo]="'Parte de Vacaciones Anuales'"></app-selec-mes>
 
 <table class="grid-vacaciones table-striped">
     <thead>
