--- a/src/app/actividades/actividades.component.html
+++ b/src/app/actividades/actividades.component.html
@@ -1,4 +1,4 @@
-<app-selec-mes></app-selec-mes>
+<app-selec-mes [titulo]="'Parte de Actividades Mensual'" [empleado]="nombre" [periodo]="periodo"></app-selec-mes>
 
 <table class="grid-actividades table-striped">
   <thead>
