--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,7 +37,7 @@
           <a class="nav-link " routerLink="empleados/solicitudVacaciones" >Solicitud de vacaciones</a>
         </li>     
         <li class="nav-item" *ngIf="loginService.isAuth()">
-          <a class="nav-link "  (click)="logout()" >Desconectar</a>
+          <a class="nav-link " style="cursor: pointer;" (click)="logout()" >Desconectar</a>
         </li>     
       </ul>
       <form class="form-inline my-2 my-lg-0">
