--- a/src/app/gastos/calgastos_ngx/calgastos-ngx.component.html
+++ b/src/app/gastos/calgastos_ngx/calgastos-ngx.component.html
@@ -1,16 +1,42 @@
 
+
+
+
+<!--
+<form [formGroup]="myForm">
+  <div class="row">
+    <div class="col-xs-12 col-12 col-sm-6 col-md-4 form-group">
+      <input type="text" class="form-control mb-3"
+             placeholder="Daterangepicker" bsDaterangepicker formControlName="range" />
+      <pre *ngIf="myForm.value.range"
+           class="code-preview">from {{myForm.value.range[0] | date}} to {{myForm.value.range[1] | date}}</pre>
+    </div>
+  </div>
+</form>
+-->
+
 <div class="row">
   <div>
     <input type="text"
            placeholder="Desde Hasta"
            class="form-control theme-blue"
            #drp="bsDaterangepicker" bsDaterangepicker [(bsValue)]="bsRangeValue"
-           
+           (change)="onSelectFecha($event)"
            [bsConfig]="bsConfig"> 
   </div>
   <div>
     <button class="btn" (click)="drp.toggle()" [attr.aria-expanded]="drp.isOpen" type="button">
       <mat-icon>date_range</mat-icon>
     </button>
+
+ <!--   <button class="btn" (click)="onSelectFecha($event)" type="button">
+      <mat-icon>date_range</mat-icon>
+      Ver valores
+    </button>  -->
+<!--
+    <p>{{bsRangeValue[0] | date:'dd/MM/yyyy'}} hasta {{bsRangeValue[1] | date:'dd/MM/yyyy'}} </p>
+  -->
+
   </div>  
 </div>
+
