--- a/src/app/vacaciones/vacaciones.component.scss
+++ b/src/app/vacaciones/vacaciones.component.scss
@@ -1,3 +1,14 @@
+.empleado-vacaciones-card {
+    max-width: 400px;
+    margin-left: 2rem;
+    box-shadow: none;;
+ }
+mat-form-field.mat-form-field {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    font-size: 12px;
+  }
+
 .grid-vacaciones {
     margin: 2rem;
     margin-top: 0;
