--- a/src/app/gastos/gastos.component.html
+++ b/src/app/gastos/gastos.component.html
@@ -1,11 +1,11 @@
-<app-selec-mes [titulo]="'Parte de Gastos Mensual'" [empleado]="empleado" [periodo]="periodo"
+<app-selec-mes [titulo]="'Parte de Actividades Mensual'" [empleado]="empleado" [periodo]="periodo"
 	(periodoEvent)="seleccionPeriodo($event)"></app-selec-mes>
-
+	
 <div class="contenedorTabla">
 	<table class="table table-striped">
-	    <thead >	estado
-			<tr>
-				<th scope="col">Proyecto</th><th scope="col">Desde - Hasta</th><th scope="col">Rango fechas</th><th scope="col">Tipo</th>
+	    <thead >
+			<tr class="fondoAzul"> 
+				<th scope="col">Proyecto</th><th scope="col">Desde - Hasta</th><th scope="col">Tipo</th>
 		 		<th scope="col">Unidades</th><th scope="col">Importe</th><th scope="col">Total</th><th scope="col">Descripción</th>
 				<th scope="col">Estado</th>
 		 	</tr>
@@ -14,38 +14,49 @@
 			<tr *ngFor="let gasto of listaGastos(); index as i">
 				<td>
 					<div>
-						<select class="custom-select" [(ngModel)]="gasto.dsProyecto" (change)="guardar()">
+						<mat-select (change)="guardar()" class="campo100 form-control" [(ngModel)]="gasto.proyecto" name="proyecto">
+							<mat-option *ngFor="let proy of getProyectos(); index as p" [value]="proy" >
+							  {{ proy.dsProyecto }}
+							</mat-option>
+						</mat-select>
+						<!--{{gasto.proyecto.dsProyecto}}-->
+						<!--<select class="custom-select" selected value="gasto.proyecto.dsProyecto" [(ngModel)]="gasto.proyecto">  
 							<option value="">Lista de Proyectos - Obtener del backend</option>
+							<option [ngValue]="proy" *ngFor="let proy of getProyectos(); index as p">								
+								{{proy.dsProyecto}}
+							</option>
+						</select>-->						 
+
+						<!--<select class="custom-select" [(ngModel)]="gasto.dsProyecto" (change)="guardar()">
+							<option value="">Lista de Proyectos - Obtener del backend</option>-->
 							<!-- Aquí irá un *ngFor con la lista de Proyectos -->
-							<option value="CMMA">CMMA</option>
+							<!--<option value="CMMA">CMMA</option>
 							<option selected value="Proyecto 1">Proyecto 1</option>
 							<option value="Proyecto 2">Proyecto 2</option>
 							<option value="Interproyecto">Interproyecto</option>
-						</select>
-
-						<!--<mat-form-field>
-							<mat-select  class="seccionSelect" placeholder="Proyecto" name="proyecto" [(ngModel)]="gasto.dsProyecto">
-								<mat-option>Lista de Proyectos - Obtener del backend</mat-option>
-								<mat-option>CMMA</mat-option>
-								<mat-option>Proyecto 1</mat-option>
-								<mat-option>Proyecto 2</mat-option>
-								<mat-option>Interproyecto</mat-option>
-							</mat-select>
-						</mat-form-field>-->
+						</select>-->
 					</div>
 				</td>
 				<td>
-					<app-calgastos-ngx [fcDesde]=gasto.fcDesde [fcHasta]=gasto.fcHasta  
-									   (_fechas) = "rangoFechas = $event">
-					</app-calgastos-ngx>
-				</td>
-				<td *ngIf="rangoFechas != null">
-					<input (change)="onChange(i)" [(ngModel)]="rangoFechas">
-					<!--{{rangoFechas[0] | date:'dd/MM/yyyy'}} - {{rangoFechas[1] | date:'dd/MM/yyyy'}}-->
+					<div class="row">
+						<div>
+						  <input type="text"
+								 placeholder="Desde Hasta"
+								 class="form-control theme-blue"
+								 #drp="bsDaterangepicker" bsDaterangepicker
+								 [(ngModel)]="gasto.rangoFechas"
+								 [bsConfig]="bsConfig"> 
+						</div> 					
+						<div>
+							<button class="btn" (click)="drp.toggle()" [attr.aria-expanded]="drp.isOpen" type="button">
+							<mat-icon>date_range</mat-icon>
+							</button>
+						</div>
+					</div>
 				</td>
 				<td>			
 					<div>
-						<select class="custom-select" [(ngModel)]="gasto.dsTipoGasto" >
+						<select class="custom-select" [(ngModel)]="gasto.tipoGasto.dsTipoGasto">
 							<option value="">Lista de Tipos - Obtener del backend</option>
 							<!-- Aquí irá un *ngFor con la lista de Tipos -->
 							<option value="Transporte">Transporte</option>
@@ -57,19 +68,19 @@
 					</div>
 				</td>
 				<td>
-					<input (change)="guardar()" type="number" class="form-control campoNum" value= "{{gasto.nmUnidades}}"/>
+					<input (change)="actualizaTotal(i)" type="number" class="form-control campoNum" [(ngModel)]="gasto.nmUnidades"/>
 				</td>
 				<td>
-					<input (change)="guardar()" type="number" class="form-control campoNum" value= "{{gasto.nmImporte}}"/>
+					<input (change)="actualizaTotal(i)" type="number" class="form-control campoNum" [(ngModel)]="gasto.nmImporte"/>
 				</td>
 				<td>
-					<input (change)="guardar()" type="number" class="form-control campoNum" value= "{{gasto.nmTotal}}"/>
+					<input type="number" disabled="true" class="form-control campoNum" [(ngModel)]="gasto.nmTotal"/>
 				</td>
 				<td>
-					<input (change)="guardar()" type="text" class="form-control campoNum" value= "{{gasto.dsDescripcion}}"/>
+					<input type="text" class="form-control campoNum" [(ngModel)]="gasto.dsDescripcion"/>
 				</td>
 				<td>
-					<label type="text">{{gasto.dsEstado}}</label>
+					<input type="text" disabled="true" class="form-control campoNum" value= "{{gasto.estado.dsEstado}}"/>
 				</td>
 				<td>
 					<div>
