--- a/src/app/gastos/gastos.component.scss
+++ b/src/app/gastos/gastos.component.scss
@@ -10,37 +10,9 @@
     width: 100px;
   }
 
-  // Estilos Datepicker Inicio
-  .form-group.hidden {
-    width: 0;
-    margin: 0;
-    border: none;
-    padding: 0;
+  .campo100 {
+    width: 170px;
   }
-  .custom-day {
-    text-align: center;
-    padding: 0.185rem 0.25rem;
-    display: inline-block;
-    height: 2rem;
-    width: 2rem;
-  }
-  .custom-day.focused {
-    background-color: #e6e6e6;
-  }
-  .custom-day.range, .custom-day:hover {
-    background-color: rgb(2, 117, 216);
-    color: white;
-  }
-  .custom-day.faded {
-    background-color: rgba(2, 117, 216, 0.5);
-  }
-  
-  // Estilos Datepicker Fin
-
-
-  mat-form-field {
-  margin-right: 12px;
-}
   
 .btn-izquierda {
   position: absolute;
@@ -53,4 +25,17 @@
   right: 5rem;
   height: 3rem;
   line-height: 3rem;
+}
+
+.row {
+  display: flex;
+  flex-wrap: nowrap !important;
+  input[type="text"] {
+    width: 13rem;
+  }
+}
+
+tr.fondoAzul {
+  color: white;
+  background-color: blue;
 }
