--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <DIV class=medio3><H1>SIPAC</H1><SPAN>Sistema Interno de Partes </SPAN>
     <P><B>INSTRUCCIONES PARA RELLENAR LOS PARTES</B> </P>
     <DIV style="WIDTH: 50%; FLOAT: left; PADDING-RIGHT: 10px"><B>ACTIVIDADES</B> 
-    <UL style="LIST-STYLE-TYPE: decimal">
+    <UL style="LIST-STYLE-TYPE: decimal; background-color: #e3f2fd;">
     <LI>Seleccione el Proyecto y Concepto al que desee imputar horas. (Pulsando sobre el icono 'P' podrá seleccionarlos por nombre) 
     <LI>Rellene para cada dia el número de horas para el Proyecto y Concepto seleccionado en la casilla correspondiente 
     <LI>Si necesita añadir observaciones para algún día haga doble click sobre la casilla del día 
@@ -13,7 +13,7 @@
     <LI>Las Ausencias y Vacaciones se imputarán con el proyecto correspondiente y con el número de horas habituales por día 
     <LI>Cualquier falta deberá ser debidamente justificada (parte médico, justificante de examen, ...) </LI></UL></DIV>
     <DIV style="WIDTH: 49%; FLOAT: left"><B>GASTOS</B> 
-    <UL style="LIST-STYLE-TYPE: decimal">
+    <UL style="LIST-STYLE-TYPE: decimal; background-color: #e3f2fd;">
     <LI>Seleccione el Proyecto y Concepto al que desee imputar gastos 
     <LI>Seleccione el rango de fechas de imputación del gasto (no rellene la Fecha Hasta si es un gasto puntual) 
     <LI>Seleccione el Tipo de Gasto, Unidades, Importe (opcional) y Total, y si corresponde, la Descripción 
@@ -23,7 +23,7 @@
     <LI>Cuando termine y verifique el parte mensual, pulse el botón Enviar 
     <LI>Cualquier Gasto deberá ser debidamente justificado, mediante factura o documento similar </LI></UL>
     <P>&nbsp; </P></DIV><BR style="CLEAR: both"><B>SOLICITUD DE VACACIONES</B> 
-    <UL style="LIST-STYLE-TYPE: decimal">
+    <UL style="LIST-STYLE-TYPE: decima; background-color: #e3f2fd;">
     <LI>Entrar en “solicitud vacaciones” y marcar los días deseados haciendo click sobre los recuadros. 
     <LI>La solicitud se podrá guardar en modo 'borrador' pulsando el botón Guardar. 
     <LI>Para proceder al envío de la solicitud pulse el botón Enviar. 
