--- a/src/app/vacaciones/selec-anio/selec-anio.component.scss
+++ b/src/app/vacaciones/selec-anio/selec-anio.component.scss
@@ -13,4 +13,8 @@ mat-form-field.mat-form-field {
     padding-top: 0 !important;
     padding-bottom: 0 !important;
     font-size: 12px;
-  }
+}
+
+.mat-input-element:disabled {
+  color: black !important;
+}
